--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+    //splashApi
+    implementation("androidx.core:core-splashscreen:1.0.0-rc01")
 }
